--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -41,7 +41,7 @@
                     android:layout_marginEnd="12dp">
 
                     <ImageButton
-                        android:id="@+id/btn_cart"
+                        android:id="@+id/btnSettings"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:background="@android:color/transparent"
