--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -174,6 +174,7 @@
                         android:layout_marginTop="8dp">
 
                         <LinearLayout
+                            android:id="@+id/payContainer"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -192,6 +193,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/shipContainer"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -210,6 +212,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/receiveContainer"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
@@ -228,6 +231,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/rateContainer"
                             android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
